{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 11,
  "lineage": "863a45b1-2302-b94b-2b66-b2e36565f81a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "day2-Igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061039803094:internet-gateway/igw-0777cb42bb249aa9d",
            "id": "igw-0777cb42bb249aa9d",
            "owner_id": "061039803094",
            "tags": {
              "Name": "day2-Igw"
            },
            "tags_all": {
              "Name": "day2-Igw"
            },
            "vpc_id": "vpc-0f1e1c3f941e3624a"
          },
          "dependencies": [
            "aws_vpc.day2-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "day2-RouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061039803094:route-table/rtb-0ab7cfc5e934d88a2",
            "id": "rtb-0ab7cfc5e934d88a2",
            "owner_id": "061039803094",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0777cb42bb249aa9d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "day2-RouteTable",
              "Service": "Terraform"
            },
            "tags_all": {
              "Name": "day2-RouteTable",
              "Service": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f1e1c3f941e3624a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.day2-Igw",
            "aws_vpc.day2-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "day2-RTA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc1d12668bcf7331",
            "route_table_id": "rtb-0ab7cfc5e934d88a2",
            "subnet_id": "subnet-01c50d130298472a8"
          },
          "dependencies": [
            "aws_internet_gateway.day2-Igw",
            "aws_route_table.day2-RouteTable",
            "aws_subnet.day2-subnet-1",
            "aws_vpc.day2-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "day2-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061039803094:security-group/sg-016207194f137a570",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-016207194f137a570",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "day2-SG",
            "name_prefix": "",
            "owner_id": "061039803094",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "day2-SG"
            },
            "tags_all": {
              "Name": "day2-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f1e1c3f941e3624a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.day2-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "day2-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061039803094:subnet/subnet-01c50d130298472a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c50d130298472a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "061039803094",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "day2-subnet-1"
            },
            "tags_all": {
              "Name": "day2-subnet-1"
            },
            "vpc_id": "vpc-0f1e1c3f941e3624a"
          },
          "dependencies": [
            "aws_vpc.day2-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "day2-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061039803094:vpc/vpc-0f1e1c3f941e3624a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fed448c777d72795",
            "default_route_table_id": "rtb-04ea0164b73d52293",
            "default_security_group_id": "sg-094f53582fa97b939",
            "dhcp_options_id": "dopt-05c09a9e4353ce38a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f1e1c3f941e3624a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04ea0164b73d52293",
            "owner_id": "061039803094",
            "tags": {
              "Name": "day2-vpc"
            },
            "tags_all": {
              "Name": "day2-vpc"
            }
          }
        }
      ]
    }
  ]
}